--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:mac-x86": "npm run build && electron-builder --mac --config ",
+    "build:mac-arm64": "npm run build && electron-builder --arm64 --mac --config ",
+    "build:linux": "npm run build && electron-builder --linux --config",
+    "changelog": "conventional-changelog -p angular -u -i CHANGELOG.md -s -r 0",
+    "changelog:dist": "conventional-changelog -p angular -i dist/CHANGELOG.md -s -r 1",
+    "bump": "zx bump.mjs"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
@@ -34,6 +39,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "conventional-changelog": "^3.1.25",
     "electron": "^24.3.0",
     "electron-builder": "^23.6.0",
     "electron-vite": "^1.0.17",
@@ -42,6 +48,7 @@
     "less": "^4.1.3",
     "prettier": "^2.8.2",
     "vite": "^4.0.4",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "zx": "^7.2.2"
   }
 }
